--- a/[compi1] practica1/[compi1] practica1.vbproj
+++ b/[compi1] practica1/[compi1] practica1.vbproj
@@ -104,6 +104,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Numero.vb" />
+    <Compile Include="SpaceInvaders.Designer.vb">
+      <DependentUpon>SpaceInvaders.vb</DependentUpon>
+    </Compile>
+    <Compile Include="SpaceInvaders.vb">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Form1.resx">
@@ -117,6 +123,9 @@
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SpaceInvaders.resx">
+      <DependentUpon>SpaceInvaders.vb</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
